update guideline doc

--- a/Docs/0.san_sdk_ios_get_started.md
+++ b/Docs/0.san_sdk_ios_get_started.md
@@ -6,6 +6,8 @@
 
 ## Import the Mobile Ads SDK
 
+:speaker: ***Choose one of the following two options***
+
 ### CocoaPods (preferred)
 
 The simplest way to import the SDK into an iOS project is to use [CocoaPods](https://guides.cocoapods.org/using/getting-started). Open your project's Podfile and add this line to your app's target:
@@ -38,7 +40,7 @@ If you're new to CocoaPods, see their [official documentation](https://guides.co
   <img src="Snapshots/framework_embed_option.png" width="80%">    
 
 1. Add the -ObjC linker flag to Other Linker Flags in your project's build settings:
-  <img src="Snapshots/objc_linker_flag.png" width="80%">
+    <img src="Snapshots/objc_linker_flag.png" width="80%">
 
 - `Admob Mediation Adapters`
 
